--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         </activity>
 
         <activity
+            android:name=".screens.nickname.NicknameActivity"
+            android:label="@string/nickname_activity__nickname_title"></activity>
+
+        <activity
             android:name=".screens.payments.PaymentsActivity"
             android:label="@string/payments_activity__payment_title"
             android:theme="@style/AppTheme.NoActionBar">
